fiexed spacing issues

--- a/tab_stuff.css
+++ b/tab_stuff.css
@@ -20,7 +20,7 @@ body {
 	border-radius: 5px;
 }
 button {
-	height: 50px !important;
+	height: 50px;
 }
 .buttons{
 	height: 80px;
